syntax = "proto3";
package secretarypb;

option java_multiple_files = true;
option java_package = "io.jiache.raft.rpc.secretary";


message ClusterTask {
    string clusterId = 1;
    repeated string followerURLs = 2;
}

service SecretaryService {
    rpc hire(SecretaryHireRequest) returns (SecretaryHireResponse) {}
    rpc dismiss(DismissRequest) returns (DismissResponse) {}
    rpc status(SecretaryStatusRequest) returns (SecretaryStatusResponse) {}
    rpc append(SecretaryAppendRequest) returns (SecretaryAppendResponse) {}
}

message SecretaryHireRequest {
    ClusterTask task = 1;
    uint64 term = 2;
}

message SecretaryHireResponse {
    uint64 term = 1;
}

message DismissRequest {
}

message DismissResponse {
}

message SecretaryStatusRequest {
}

message SecretaryStatusResponse {
    repeated ClusterTask tasks = 1;
}

message SecretaryAppendRequest {

}

message SecretaryAppendResponse {

}